fix: card logo overlapping

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -88,6 +88,11 @@ $FreestyleGuide-color--background: $background
     align-items: center
     justify-content: center
 
+.card-header-icon
+  img
+    height: 45px
+    width: 45px
+
 input
   display: block
 
